changed dark mode toggle

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <button class="see-all">See all</button>
     </section>
 
-    <button type="button" id="darkmode">Dark mode toggle</button>
+    <button type="button" id="darkmode">Dark</button>
   </main>
   
 
